Minor fix to css on mobile

--- a/css/master.css
+++ b/css/master.css
@@ -172,7 +172,6 @@ textarea {
   }
   .column {
     max-width: 100%;
-    margin: 0 auto;
   }
 }
 
